# butena

./: .env-example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  env-sample  prestart.sh  requirements.txt  setup.cfg
alembic/: env.py
alembic/versions/: 0da61efb474d_create_a_baseline_migrations.py  29d55cea1d9e_create_initial_tables.py  8cdfa5eefcac_create_superuser.py  b9a9a518d6ae_create_superuser.py  bac8b59ea9f3_initialize_all_tables.py
app/: exceptions.py  pre_start.py  reverse_proxy.py  server.py  settings.py
app/api/: router.py
app/api/auth/: depends.py  jwt.py  main.py  model.py  schema.py  service.py
app/api/functionality/: main.py  model.py  s3_operation.py  schema.py  service.py
app/api/managements/: routes.py  schema.py  services.py
app/api/tools/: main.py  routes.py
app/core/: config.py  db.py  load_config.py  main.py  utils.py
app/core/db/: __init__.py  db.py  engine.py  models.py
app/frontend/: template_router.py
butena/tests/: test_health.py
templates/: index.html
tests/: test_bucket.py  test_health.py
