[metadata]
name = Butena
description = Api for deploy static website in s3
author = Nitin Namdev
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11


[options]
packages =
    butena

python_requires = >=3.11
package_dir =
    =.

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
butena = py.typed

[project.optional-dependencies]
all = [
    "annotated-types==0.6.0"
    "anyio==4.3.0",
    "click==8.1.7",
    "ecdsa==0.18.0",
    "fastapi==0.109.2",
    "greenlet==3.0.3",
    "h11==0.14.0",
    "httptools==0.6.1",
    "idna==3.6",
    "passlib==1.7.4",
    "psycopg2==2.9.9",
    "pyasn1==0.5.1",
    "pydantic==2.6.1",
    "pydantic_core==2.16.2",
    "python-dotenv==1.0.1",
    "python-jose==3.3.0",
    "PyYAML==6.0.1",
    "rsa==4.9",
    "six==1.16.0",
    "sniffio==1.3.0",
    "SQLAlchemy==2.0.27",
    "starlette==0.36.3",
    "typing_extensions==4.9.0",
    "uvicorn==0.27.1",
    "uvloop==0.19.0",
    "watchfiles==0.21.0",
    "websockets==12.0"]

[flake8]
max-line-length = 160
